Update COnfigFile.java and User.java and their son class

--- a/Config.properties
+++ b/Config.properties
@@ -1,7 +1,10 @@
 UserName = null
 PassWord = null
-Configured = false
 
 CT = @ctc
 CM = @cmcc
 CU = @cuc
+
+# 未进行初始化前的标志位
+type = 3
+Configured = false
