Update config file

--- a/Config.properties
+++ b/Config.properties
@@ -1,9 +1,9 @@
-#NULL
-#Sun Jul 18 22:35:12 CST 2021
-CM=@cmcc
-PassWord=135650
-Configured=true
-CU=@cuc
-type=0
-CT=@ctc
-UserName=2019212212237
+UserName = null
+PassWord = null
+CT = @ctc
+CM = @cmcc
+CU = @cuc
+
+# 未进行初始化前的标志位
+type = 3
+Configured = false 
